--- a/demo/src/main/resources/static/css/style.css
+++ b/demo/src/main/resources/static/css/style.css
@@ -8,7 +8,9 @@
 /* Login / Signup Pages */
 body.login-signup {
   font-family: Arial, sans-serif;
-  background: linear-gradient(to right, #6a11cb, #2575fc);
+  /*background: linear-gradient(to right, #6a11cb, #2575fc); */
+  background-color: #484444;
+  background-image: linear-gradient(rgba(0, 102, 204, 0.1), rgba(0, 102, 204, 0.1));
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -58,7 +60,7 @@ input:focus {
 button {
   width: 100%;
   padding: 0.8rem;
-  background: #2575fc;
+  background: #484444;
   color: #fff;
   font-size: 1rem;
   border: none;
@@ -111,7 +113,9 @@ body.dashboard {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background-color: #2575fc;
+  /* background-color: #2575fc; */
+  background-color: #484444;
+  background-image: linear-gradient(rgba(0, 102, 204, 0.1), rgba(0, 102, 204, 0.1));
   color: white;
   justify-content: center;
   align-items: center;
@@ -123,7 +127,7 @@ body.dashboard {
 .logo {
   font-size: 1.8rem;
   font-weight: bold;
-  color: #2575fc;
+  color: #484444;
 }
 
 /* Actions section aligned left, below logo */
@@ -163,7 +167,7 @@ body.dashboard {
 }
 
 .actions button:last-child {
-  background: #2575fc;
+  background: #484444;
   color: #fff;
 }
 
@@ -315,14 +319,14 @@ body.dashboard {
   border: 1px solid #2575fc;
   border-radius: 6px;
   background-color: #fff;
-  color: #2575fc;
+  color: #484444;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
 }
 
 .pagination button:hover {
-  background-color: #2575fc;
+  background-color: #484444;
   color: #fff;
 }
 
